refactor: change the deprecated new Locales() constructor to method invocation